test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/15.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:d79a9166270d74b2aa6fc485074db88c6de0b3d436f7628d158fe3572e441a11
size 4560251
